--- a/style.css
+++ b/style.css
@@ -6,21 +6,23 @@
   font-family: tangiang;
   color:rgb(224, 223, 223);
 }
+body {
+  display: flex;
+  justify-content: center;
+}
 #nav-bar {
   z-index: 101;
-  top: 0;
   position: fixed;
   background-color: rgb(155, 89, 46);
   color: whitesmoke;
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content: space-between;
   padding: 1.5%;
   height: 6vh;
   font-size: 20px;
-  margin: 1%;
-  margin-top: 0;
   box-shadow: 0px 10px 6px -5px rgb(72, 72, 72);
+  width: 185vh;
 }
 .nav-element {
   margin: 20px;
@@ -79,6 +81,15 @@ body {
   padding: 15px;
   text-align: left;
   overflow: hidden;
+}
+.experience-box {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  text-align: left;
+  overflow: hidden;
+  background-color: rgb(133, 77, 39);
+  margin: 5px;
 }
 #pageTop {
   display: flex;
