--- a/style.css
+++ b/style.css
@@ -11,27 +11,22 @@ body {
   justify-content: center;
 }
 #nav-bar {
+  text-align: center;
   z-index: 101;
   position: fixed;
   background-color: rgb(155, 89, 46);
   color: whitesmoke;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1.5%;
   height: 6vh;
   font-size: 20px;
   box-shadow: 0px 10px 6px -5px rgb(72, 72, 72);
-  width: 185vh;
+  width: 95vw;
 }
 .nav-element {
-  margin: 20px;
-}
-#inner-nav {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  margin: 15px;
 }
 h1 {
   color: rgb(46, 31, 39);
@@ -148,10 +143,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 6vh;
+  gap: 6vw;
   margin-top: 8%;
-  margin-left: 5vh;
-  margin-right: 5vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
   overflow: hidden;
 }
 
@@ -162,7 +157,7 @@ footer {
 }
 
 #map {
-  width: 110vh;
+  width: 70vw;
   height: 75vh;
 }
 
@@ -201,7 +196,7 @@ footer {
 
 #result {
   background-color: rgba(133, 77, 39, 0.8);
-  padding: 1vh;
+  padding: 1vw;
 }
 
 button {
