--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-@font-face {
-  font-family: tangiang;
-  src: url(./Assets/Tangiang.otf);
-}
 * {
-  font-family: tangiang;
+  font-family: 'EB Garamond', serif;
+}
+html {
+  scroll-behavior: smooth;
 }
 body {
   color:rgb(224, 223, 223);
@@ -34,20 +33,29 @@ a {
   text-align: center;
   z-index: 101;
   position: fixed;
-  background-color: rgb(155, 89, 46);
-  color: whitesmoke;
+  background-color: rgb(255, 255, 255);
+  color: rgb(165, 165, 165);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 1.5%;
-  height: 6vh;
+  height: 9vh;
   font-size: 20px;
-  box-shadow: 0px 10px 6px -5px rgb(72, 72, 72);
-  width: 95vw;
+  box-shadow: 0px 5px 6px -5px rgb(213, 213, 213);
+  width: 100vw;
 }
 #fake-nav {
   height: 15vh;
   width: 100vw;
+}
+#name-in-nav {
+  cursor: auto;
+  font-size: xx-large;
+  font-style: italic;
+  background-clip: text;  
+  color: transparent;
+  background-image: url(Assets/flowers_on_a_window_ledge_2014.79.25.jpg);
+  background-repeat: repeat;
 }
 .nav-element {
   margin: 15px;
@@ -55,6 +63,10 @@ a {
 }
 h1 {
   color: rgb(46, 31, 39);
+}
+#still-life {
+  width: 100vw;
+  margin: 5px 0px 5px 0px;
 }
 #tyson {
   width: 25vw;
