--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,6 @@ h1 {
 }
 h2 {
     color: black;
-    font-style: italic;
     text-align: center;
 }
 .page-button {
@@ -52,11 +51,10 @@ h2 {
     text-align: center;
     color: black;
     font-style: italic;
-    font-size: small;
+    font-size: medium;
 }
-
 .page-section {
-    margin-top: 5%;
+    margin-top: 3%;
 }
 .section-separator {
     margin-top: 2%;
@@ -70,7 +68,11 @@ h2 {
 }
 .section-title {
     font-size: 3em;
-    margin: 1.5%;
+    margin: 1.2%;
+    width: 65%;
+    font-weight: lighter;
+    padding: 0.5%;
+    backdrop-filter: brightness(1.5);
 }
 
 /* Nav Bar Stuff */
@@ -199,11 +201,11 @@ h2 {
     width: 100vw;
     background-image: url("Assets/Paintings/peonies_in_a_vase_2018.44.124.webp");
     background-size: 100vw;
+    overflow: hidden;
+    padding: 1.5%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
-    padding: 1%;
 }
 .project-box {
     margin-top: 5%;
@@ -315,13 +317,18 @@ li {
     align-items: center;
     gap: 6vh;
     width: 100vw;
+    background-color: whitesmoke;
+}
+#gall-title {
+    width: 100%;
+    margin: 0px;
+    background-color: whitesmoke;
 }
 .gallery-year {
     display: flex;
     align-items: stretch;
     justify-content: center;
     width: 97vw;
-    background-color: white;
     padding: 1%;
     margin: 1%;
 }
@@ -373,6 +380,18 @@ li {
     height: 25vw;
     overflow: hidden;
     margin: 0.5%;
+}
+.gallery-caption-pair:hover {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    width: 25vw;
+    height: 25vw;
+    overflow: hidden;
+    margin: 0.5%;
+    filter: brightness(1.1);
 }
 .gallery-pic {
     flex-shrink: 0;
