--- a/stylesheet.css
+++ b/stylesheet.css
@@ -453,6 +453,17 @@ li {
         height: inherit;
         overflow: hidden;
     }
+    .gallery-caption-pair:hover {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        gap: 0;
+        width: 80vw;
+        height: inherit;
+        overflow: hidden;
+        filter: brightness(1.1);
+    }
     .gallery-caption {
         display: flex;
         flex-direction: column;
