--- a/modern.css
+++ b/modern.css
@@ -6,9 +6,9 @@ body {
     background-color: rgb(54, 53, 53);
 }
 #about-opener {
-    background: linear-gradient(45deg,  rgb(121, 173, 75),rgb(154, 192, 146),  rgb(21, 84, 55));
+    background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
 	background-size: 500% 500%;
-	animation: gradient 20s ease infinite;
+	animation: gradient 10s ease infinite;
 	height: 100vh;
     width: 100vw;
 }
@@ -20,7 +20,26 @@ body {
 }
 h1 {
     font-size: 3.2em;
+    width: 100%;
 }
+
+a {
+    color: rgb(242, 201, 152);
+    transition: color 1s;
+}
+
+a:hover {
+    color: rgb(26, 125, 186);
+}
+
+hr {
+    background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
+    height: 1vh;
+    border: none;
+    opacity: 30%;
+}
+
+
 #about {
     position: relative;
     z-index: 1;
@@ -102,7 +121,6 @@ h1 {
 
 #nav-buttons {
     display: flex;
-
 }
 
 .nav-button {
@@ -112,6 +130,18 @@ h1 {
     background: none;
     color: white;
     margin: 2%;
+    transition: color 1s;
+
+}
+
+.nav-button:hover {
+    font-size: 1.2em;
+    border-radius: 10%;
+    border: none;
+    background: none;
+    color: black;
+    margin: 2%;
+    cursor: pointer;
 }
 
 /* After top part */
@@ -119,4 +149,48 @@ footer {
     display: flex;
     justify-content: center;
     color: whitesmoke;
+}
+
+#sections {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5%;
+}
+
+/* About section */
+
+/* Socials */
+
+#about-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    font-size: 1.3em;
+    color: rgb(230, 230, 230);
+}
+
+#name-and-socials {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+#socials {
+    background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
+    width: fit-content;
+    display: flex;
+    padding: 6%;
+    gap: 5%;
+    justify-content: center;
+    border-radius: 15px;
+}
+
+.social-photo {
+    width: 3vw;
+    margin: 0.5%;
 }
