--- a/modern.css
+++ b/modern.css
@@ -11,6 +11,7 @@ body {
 	animation: gradient 10s ease infinite;
 	height: 100vh;
     width: 100vw;
+    transition: font-size 1s;
 }
 #particles-js {
     width: 100vw;
@@ -109,7 +110,7 @@ hr {
 #nav {
     position: relative;
     z-index: 1;
-    width: 85vw;
+    width: 90vw;
     padding: 5%;
     padding-top: 3%;
     padding-bottom: 0;
@@ -124,7 +125,9 @@ hr {
 }
 
 #nav-buttons {
+    width: 100%;
     display: flex;
+    justify-content:flex-end;
 }
 
 .nav-button {
@@ -148,11 +151,52 @@ hr {
     cursor: pointer;
 }
 
+@media(max-width: 780px) {
+    #about-opener {
+        font-size: 0.85em;
+    }
+}
+@media(max-width: 630px) {
+    h1 {
+        font-size: 2.4em;
+    }
+    #about-opener {
+        font-size: 0.9em;
+    }
+}
+@media(max-width: 430px) {
+    h1 {
+        font-size: 1.5em;
+    }
+    #about-opener {
+        text-align: center;
+        padding: 4% 0;
+        width: 100vw;
+        font-size: 1em;
+        margin: 0;
+    }
+    #nav {
+        display: none;
+    }
+}
+
 /* After top part */
 footer {
+    transition: font-size 1s;
+    text-align: center;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 1%;
     color: whitesmoke;
+    background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
+}
+
+@media(max-width: 780px) {
+    footer {
+        font-size: small;
+    }
 }
 
 #sections {
@@ -164,9 +208,18 @@ footer {
 }
 
 .section-title {
-    font-size: 2.8em;
+    font-size: 3em;
     color: whitesmoke;
     animation: bounce 4s ease infinite;
+}
+
+@media(max-width: 440px) {
+    .section-title {
+        font-size: 3em;
+        text-align: center;
+        color: whitesmoke;
+        animation: bounce 4s ease infinite;
+    }
 }
 
 /* About section */
@@ -174,18 +227,17 @@ footer {
 /* Socials */
 
 #about-section {
-    padding: 10%;
     background-color: rgba(249, 226, 135, 0.041);
     display: flex;
     justify-content: center;
     align-items: baseline;
-    width: 90vw;
+    width: 100vw;
     font-size: 1.4em;
     color: rgb(230, 230, 230);
     padding-top: 3%;
     padding-bottom: 3%;
-
 }
+
 
 #name-and-socials {
     display: flex;
@@ -195,14 +247,16 @@ footer {
     width: 100%;
 }
 
+
 #socials {
     background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
     width: fit-content;
     display: flex;
-    padding: 6%;
-    gap: 5%;
+    padding: 4% 12%;
+    gap: 6%;
     justify-content: center;
     border-radius: 15px;
+    transition: padding 1s;
 }
 
 .social-photo {
@@ -223,11 +277,54 @@ footer {
 #drawing {
     width: 12vw;
 }
+@media(max-width: 680px) {
+    #drawing {
+        display: none;
+    }
+}
+
+@media (max-width: 900px) {
+    #about-section {
+        background-color: rgba(249, 226, 135, 0.041);
+        display: flex;
+        justify-content: space-around;
+        align-items: baseline;
+        width: 100vw;
+        font-size: 1.4em;
+        color: rgb(230, 230, 230);
+        padding-top: 3%;
+        padding-bottom: 3%;
+        flex-direction: column;
+    }
+    #name-and-socials {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 5%;
+    }
+    .social-photo {
+        width: 6vw;
+        margin: 0.5%;
+    }
+    #socials {
+        background: linear-gradient(45deg,  rgb(19, 102, 154),rgb(154, 192, 146),  rgb(249, 165, 135), rgb(249, 226, 135));
+        width: fit-content;
+        display: flex;
+        padding: 4% 6%;
+        gap: 6%;
+        justify-content: center;
+        border-radius: 15px;
+    }
+
+}
 
 /* Project Section */
 #project-section {
-    padding: 10%;
+    padding: 5%;
     padding-top: 1%;
+    padding-bottom: 4%;
     width: 90vw;
 }
 
@@ -237,12 +334,22 @@ footer {
     padding: 1.3%;
     width: fit-content;
     color: black;
+    text-align: center;
 }
 
 
 .project-title {
     font-size: 1.8em;
     color: rgb(182, 72, 29);
+}
+
+@media(max-width: 440px) {
+    .project-title {
+        font-size: 1.8em;
+        color: rgb(182, 72, 29);
+        text-align: center;
+        margin-top: 8%;
+    }
 }
 
 .project {
@@ -262,6 +369,12 @@ footer {
     background-color: whitesmoke;
     height: 50vh;
 }
+
+@media (max-width: 1100px) {
+    .project-bar {
+        display: none;
+    }
+}
 .opacity-bar {
     width: 2vw;
     background-color: rgba(255, 25, 0, 0.468);
@@ -275,12 +388,23 @@ footer {
     height: 15em;
     padding: 5%;
 }
+@media(max-width: 900px) {
+
+    .project-image {
+        display: none;
+    }
+    
+    .project-info {
+        font-size: 1.2em;
+        width: 85vw;
+    }
+}
 
 /* experience section */
 #experience-section {
-    padding: 10%;
     padding-top: 0;
-    width: 90vw;
+    padding-bottom: 3%;
+    width: 100vw;
 }
 
 #jobs {
@@ -288,6 +412,11 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     color: whitesmoke;
+}
+@media(max-width: 440px) {
+    .job-title {
+        text-align: center;
+    }
 }
 
 .job {
@@ -299,50 +428,123 @@ footer {
     font-size: 1.2em;
     padding: 1%;
 }
+@media(max-width: 900px) {
 
-/* skills */
-#skill-section {
-    padding: 10%;
-    padding-top: 0;
-    width: 90vw;
+    #jobs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: whitesmoke;
+    }
+    .job {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80vw;
+        margin: 2%;
+        font-size: 1.2em;
+        padding: 1%;
+    }
 }
 
-#programming-skills {
+/* gallery */
+#gallery {
     display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    align-items: flex-end;
-    justify-content: center;
-    padding: 1%;
+    width: 100%;
+    margin-top: 5%;
 }
 
-.skill-bubble {
-    margin: 0.2%;
-    padding: 2%;
-    border-radius: 50%;
-    overflow: hidden;
-    color: black;
-    font-size: 1.2em;
+.gallery-caption-pair {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    transition: scale 1s, margin 1s, filter 1s;
-
-}
-
-.skill-bubble:hover {
-    margin: 0.2%;
-    margin-right: 1%;
-    margin-left: 1%;
-    padding: 2%;
-    border-radius: 50%;
+    justify-content: center;
+    gap: 0;
+    width: 25vw;
+    height: 25vw;
     overflow: hidden;
-    color: black;
-    font-size: 1.2em;
+    margin: 0.5%;
+}
+.gallery-caption-pair:hover {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    scale: 1.2;
-    filter: brightness(120%);
+    justify-content: center;
+    gap: 0;
+    width: 25vw;
+    height: 25vw;
+    overflow: hidden;
+    margin: 0.5%;
+    filter: brightness(1.1);
+}
+.gallery-pic {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: 25vw;
+    height: auto;
+}
+.gallery-caption {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    width: 25vw;
+    height: 25vw;
+    background-image: linear-gradient( 180deg,  rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.253) 65%, rgb(0, 0, 0));
+    position: absolute;
+    z-index: 0;
 }
 
-
+@media(max-width: 900px) {
+    #gallery {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin-top: 5%;
+    }
+    .gallery-pic {
+        width: 80vw;
+        height: auto;
+        margin: 5% 3% 1% 3%;
+    }
+    .gallery-caption-pair {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        gap: 0;
+        width: 80vw;
+        height: inherit;
+        overflow: hidden;
+    }
+    .gallery-caption-pair:hover {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        gap: 0;
+        width: 80vw;
+        height: inherit;
+        overflow: hidden;
+        filter: brightness(1.1);
+    }
+    .gallery-caption {
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: center;
+        width: 80vw;
+        background-image: linear-gradient( 180deg,  rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.253) 65%, rgb(0, 0, 0));
+        position: absolute;
+        z-index: 0;
+    }
+}
