--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,8 @@ html {
     overflow-x: hidden;
 }
 body {
+    background-color: #fffaf8;
+
     color:rgb(224, 223, 223);
     width: 100%;
     margin: 0;
@@ -53,6 +55,7 @@ h2 {
     font-style: italic;
     font-size: medium;
 }
+
 .page-section {
     margin-top: 3%;
 }
@@ -66,13 +69,14 @@ h2 {
 .line {
     width: 75vw;
 }
+
 .section-title {
-    font-size: 3em;
+    font-size: 4em;
     margin: 1.2%;
     width: 65%;
     font-weight: lighter;
     padding: 0.5%;
-    background-color: white;
+    color: black;
 }
 
 /* Nav Bar Stuff */
@@ -84,8 +88,8 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.5%;
-    height: 6vh;
+    padding: 1.3%;
+    height: 4.5vh;
     font-size: 25px;
     box-shadow: 0px 5px 6px -5px rgb(213, 213, 213);
     width: 100vw;
@@ -133,10 +137,24 @@ h2 {
 }
 
 /* About Me Section */
+#about-title {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 #about-me {
     overflow: hidden;
     background-image: url("Assets/Paintings/still_life_with_silver_cake_basket_2014.136.76.webp");
-    background-size: 100vw;
+    background-size: 90vw;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    border: 3mm ridge rgb(209, 188, 94);   
+    outline: 0.4rem dashed rgb(199, 187, 78);
+    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
+
 }
 
 /* Overlay */
@@ -155,7 +173,7 @@ h2 {
     }
 }
 #about-overlay {
-    width: 100vw;
+    width: 95vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -172,7 +190,7 @@ h2 {
     align-items: center;
     background-color: rgba(255, 255, 255, 1);
     color: rgb(103, 103, 103);
-    padding: 1.5%;
+    padding: 1.35%;
 }
 #about {
     text-align: c;
@@ -180,7 +198,7 @@ h2 {
     background-color: rgba(255, 255, 255, 1);
     color: rgb(103, 103, 103);
     padding: 1.5%;
-    font-size: larger;
+    font-size: large;
 }
 #socials {
     display: flex;
@@ -231,28 +249,33 @@ h2 {
 
 /* Projects */
 #project-section {
-    width: 100vw;
-    background-image: url("Assets/Paintings/peonies_in_a_vase_2018.44.124.webp");
-    background-size: 100vw;
+    width: 98vw;
+    padding: 1%;
     overflow: hidden;
-    padding: 1.5%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background-color: rgb(250, 250, 242);
 }
 .project-box {
-    margin-top: 5%;
+    background-image: url("Assets/Paintings/peonies_in_a_vase_2018.44.124.webp");
+    background-size: 100vw;
+    margin-top: 4%;
     display: flex;
-    padding: 15px;
+    padding: 1.5%;
     text-align: left;
     overflow: hidden;
     justify-content: space-around;
-    padding: 0;
     width: 75vw;
-    background-color: white;
     color:rgb(103, 103, 103);
+    border: 3mm ridge rgb(209, 188, 94);   
+    outline: 0.4rem dashed rgb(199, 187, 78);
+    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);    
+    display: flex;
 }
 .project-images {
+    
     width: 20vw;
     display: flex;
     flex-direction: column;
@@ -283,22 +306,31 @@ h2 {
     }
 }
 .project-pic {
-    width: 20vw;
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: 25vw;
+    height: auto;
 }
 .project-title {
     font-size: 4vh;
 }
 .project-info {
+    background-color: white;
     margin: 1vh 1vw;
-    padding: 5vh;
+    padding: 3vh;
     font-size: medium;
 }
 #projects {
     margin: 5vh 5vw 5vh 5vw;
     background-color: whitesmoke;
 }
+.project-info p {
+    text-align: center;
+}
 .projectBox blockquote {
     font-size: x-large;
+
 }
 li {
     margin: 2vh;
@@ -321,24 +353,35 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(Assets/Paintings/flowers_on_a_window_ledge_2014.79.25.webp);
-    background-size: 100vw;
     justify-content: center;
     gap: 2%;
     padding: 4%;
+    background-color: rgb(255, 246, 231);
+}
+#experience-boxes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .experience-box {
-    width: 50vw;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3%;
+    padding: 2.2%;
     text-align: left;
     overflow: hidden;
     color:rgb(103, 103, 103);
-    background-color: rgb(255, 255, 255);
-    margin: 1%;
+    background-image: url(Assets/Paintings/flowers_on_a_window_ledge_2014.79.25.webp);
+    background-size: 100vw;    margin: 1%;
     font-size: large;
+    border: 3mm ridge rgb(209, 188, 94);   
+    outline: 0.4rem dashed rgb(199, 187, 78);
+    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);    
+    display: flex;
+}
+.experience-info {
+    background-color: white;
 }
 .experience-box h3 {
     text-align: center;
@@ -354,14 +397,20 @@ li {
     padding: 1%;
     border-radius: 0px 10px 10px 0px;
 }
-@media (max-width: 960px) {
+@media (max-width: 1260px) {
+    #experience-boxes {
+        flex-direction: column;
+    }
     .experience-box {
         width: 75vw;
+        margin: 2%;
     }
 }
 @media (max-width: 450px) {
     .experience-box {
         width: 85vw;
+        margin: 1%;
+
     }
 }
 
@@ -374,12 +423,13 @@ li {
     align-items: center;
     gap: 6vh;
     width: 100vw;
-    background-color: whitesmoke;
+    background-color: #f6efed;
 }
 #gall-title {
     width: 100%;
     margin: 0px;
-    background-color: whitesmoke;
+    background-color: #f6efed;
+    color: black;
 }
 .gallery-year {
     display: flex;
@@ -419,12 +469,12 @@ li {
     justify-content: center;
     align-items: center;
     font-size: x-large;
-    color: black;
+    color:rgba(0, 0, 0, 0.37);
 }
 .year-line {
     width: 1%;
     height: 100%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.37);
 }
 
 .gallery-caption-pair {
@@ -437,6 +487,9 @@ li {
     height: 25vw;
     overflow: hidden;
     margin: 0.5%;
+    border: 1mm ridge rgb(209, 188, 94);   
+    outline: 0.2rem dashed rgb(199, 187, 78);
+    box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);    
 }
 .gallery-caption-pair:hover {
     display: flex;
@@ -483,6 +536,7 @@ li {
         width: 80vw;
         height: inherit;
         overflow: hidden;
+        margin: 1%;
     }
     .gallery-caption-pair:hover {
         display: flex;
@@ -494,6 +548,7 @@ li {
         height: inherit;
         overflow: hidden;
         filter: brightness(1.1);
+        margin: 1%;
     }
     .gallery-caption {
         display: flex;
@@ -520,7 +575,7 @@ li {
 footer {
     text-align:  center;
     color: black;
-    background-color: rgb(183, 199, 211);
+    background-color: #f6efed;
     padding: 2px;
     width: 100vw;
     margin-top: 1%;
