changed out style a bit

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -595,7 +595,7 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    background-image: url("Assets/Photos/Lavenders.JPG");
+    background-image: url("Assets/Photos/SepiaTonedFrontenac.JPG");
     background-size:cover;
     background-repeat: no-repeat;
     height: 40vh;
