--- a/stylesheet.css
+++ b/stylesheet.css
@@ -610,8 +610,6 @@ footer {
     border: 1px solid black;
     letter-spacing: 15px;
     text-indent: 25px;
-
-
 }
 
 #photo-about {
@@ -691,5 +689,88 @@ footer {
 .portfolio-photo {
     width: 30%;
     height: auto;
+    margin: 1%;
+}
+
+/* Flashcard Stuff */
+#cards-title {
+    background-color: white;
+    padding: 1%;
+    text-align: center;    
+    backdrop-filter: blur(20px);
+    width: fit-content;
+    border: 1px solid black;
+    letter-spacing: 15px;
+    text-indent: 25px;
+}
+
+#card {
+    background-color: white;
+    padding: 1%;
+    text-align: center;    
+    border: 1px solid black;
+    width: 50vw;
+    height: 60vh;
+    margin: 1%;
+}
+
+#card-page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+    justify-content: space-around;
+}
+
+#cards {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-header {
+    color: rgb(92, 92, 92);
+    font-size: larger;
+}
+
+.card {
+    width: 80vw;
+    background-color: white;
+    padding: 1%;
+    text-align: center;    
+    border: 1px solid black;
+    margin: 1%;
+    overflow: scroll;
+}
+
+.card-content {
+    display: flex;
+    justify-content: space-around;
+    color: gray;
+    align-items: center;
+}
+
+.card-info {
+    width: 50vw;
+    text-align: left;
+}
+
+.card-separator {
+    width: 0.2vw;
+    background-color: gray;
+    height: 40vh;
+}
+
+.card-image {
+    width: 30vw;
+}
+
+.card-image-caption {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 1%;
 }
