added all the works

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -714,6 +714,15 @@ footer {
     margin: 1%;
 }
 
+.work-card {
+    background-color: white;
+    padding: 1%;
+    text-align: center;    
+    border: 1px solid black;
+    margin: 1%;
+    font-size: larger;
+}
+
 #card-page-content {
     display: flex;
     flex-direction: column;
@@ -765,6 +774,20 @@ footer {
 
 .card-image {
     width: 30vw;
+}
+
+.work-border {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    width: 25vw;
+    overflow: hidden;
+    margin: 0.5%;
+    border: 1mm ridge rgb(209, 188, 94);   
+    outline: 0.2rem dashed rgb(199, 187, 78);
+    box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);
 }
 
 .card-image-caption {
