--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ html {
     overflow-x: hidden;
 }
 body {
-    background-color: #fffaf8;
+    background-color: white;
 
     color:rgb(224, 223, 223);
     width: 100%;
@@ -15,7 +15,7 @@ body {
     overflow-x: hidden;
 }
 a {
-    color:rgb(0, 0, 0);
+    color:rgb(47, 94, 57);
     font-weight: 700;
 }
 h1 {
@@ -30,7 +30,7 @@ h2 {
 .page-button {
     border-radius: 0;
     background-color: rgb(255, 255, 255);
-    padding: 2% 5%;
+    padding: 1% 4%;
     border: none;
     color: rgb(0, 0, 0);
     font-size: large;
@@ -40,7 +40,7 @@ h2 {
 .page-button:hover {
     border-radius: 0;
     background-color: rgb(242, 242, 242);
-    padding: 2% 5%;
+    padding: 1% 4%;
     border: none;
     color: rgb(0, 0, 0);
     border: 1px solid;
@@ -89,9 +89,9 @@ h2 {
     align-items: center;
     justify-content: center;
     padding: 1.3%;
-    height: 4.5vh;
+    height: 4.3vh;
     font-size: 25px;
-    box-shadow: 0px 5px 6px -5px rgb(213, 213, 213);
+    box-shadow: 0px 5px 6px -5px rgb(70, 70, 70);
     width: 100vw;
     z-index: 5;
 }
@@ -111,7 +111,7 @@ h2 {
     cursor: pointer;
 }
 #fake-nav {
-    height: 10.5vh;
+    height: 9vh;
     width: 100vw;
 }
 
@@ -137,6 +137,64 @@ h2 {
 }
 
 /* About Me Section */
+
+#banner {
+    height: 5em;
+    overflow: hidden;
+    width: 100vw;
+    background-image: url("Assets/Paintings/atraces.jpg");
+    background-size: 100vw;
+    color: whitesmoke;
+    display: flex;
+    justify-content: end;
+    align-items:end;
+}
+#painting-caption {
+    margin: 0;
+    margin-right: 1%;
+    margin-bottom: 0.5%;
+    font-size: 2vb;
+}
+
+#page-title {
+    background-color: white;
+    padding: 1%;
+    text-align: center;    
+    backdrop-filter: blur(20px);
+    width: fit-content;
+    border: 1px solid black;
+    letter-spacing: 15px;
+    text-indent: 25px;
+}
+#home-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
+}
+#profile-pic {
+    width: 15em;
+    overflow: hidden;
+}
+
+
+#profile-container {
+    padding: 1%;
+    margin: 1%;
+    border: 1px solid black;
+    color: gray;
+    text-align: center;
+    box-shadow:12px 12px 3px 2px rgba(0, 0, 0, 0.2);
+    transform: rotate(3deg);
+}
+.code {
+    font-family:'Courier New', Courier, monospace;
+    background-color: #f7f7f7;
+    border-radius: 15%;
+    border: 1px solid #e4ece3;
+
+}
+
 #about-title {
     width: 100vw;
     display: flex;
@@ -157,21 +215,7 @@ h2 {
 
 }
 
-/* Overlay */
-@keyframes slowly-appear {
-    0% {
-      opacity: 50%;
-      transform: translateX(-100%);
-    }
-    80% {
-        transform: translateX(1.5%);
-      }
-    100% {
-        opacity: 100%;
-        transform: translateX(0);
 
-    }
-}
 #about-overlay {
     width: 95vw;
     display: flex;
@@ -179,8 +223,8 @@ h2 {
     align-items: center;
     gap: 1%;
     margin: 1.2%;
-    animation: 4.5s ease-out 0s 1 slowly-appear;
 }
+
 #name-card {
     text-align: center;
     width: 22vw;
@@ -192,17 +236,22 @@ h2 {
     color: rgb(103, 103, 103);
     padding: 1.35%;
 }
-#about {
-    text-align: c;
+#page-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
     width: 60vw;
     background-color: rgba(255, 255, 255, 1);
     color: rgb(103, 103, 103);
-    padding: 1.5%;
     font-size: large;
+}
+.page-text {
+    width: 60vw;
 }
 #socials {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     gap: 5%;
 }
 #tyler {
@@ -575,7 +624,7 @@ li {
 footer {
     text-align:  center;
     color: black;
-    background-color: #f6efed;
+    background-color:whitesmoke;
     padding: 2px;
     width: 100vw;
     margin-top: 1%;
