--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,20 +10,20 @@ html {
 }
 body {
     background-color: white;
-    color:rgb(224, 223, 223);
+    color: rgb(224, 223, 223);
     width: 100%;
     margin: 0;
     overflow-x: hidden;
 }
 .code {
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;
     background-color: #f7f7f7;
     padding: 0% 0.5%;
     border-radius: 5px;
     border: 1px solid #e4ece3;
 }
 a {
-    color:rgb(47, 94, 57);
+    color: rgb(47, 94, 57);
     font-weight: 700;
 }
 h1 {
@@ -70,7 +70,6 @@ h2 {
     width: 75vw;
 }
 
-
 /* Nav Bar Stuff */
 #nav-bar {
     text-align: center;
@@ -104,7 +103,7 @@ h2 {
     margin: 15px;
     cursor: pointer;
     color: rgb(103, 103, 103);
-    text-decoration:none;
+    text-decoration: none;
     font-weight: 200;
 }
 .nav-element:hover {
@@ -132,12 +131,12 @@ h2 {
     height: 5em;
     overflow: hidden;
     width: 100vw;
-    background-image: url("Assets/Paintings/atraces.jpg");
+    background-image: url('Assets/Paintings/atraces.jpg');
     background-size: 100vw;
     color: whitesmoke;
     display: flex;
     justify-content: end;
-    align-items:end;
+    align-items: end;
 }
 #painting-caption {
     margin: 0;
@@ -148,7 +147,7 @@ h2 {
 #page-title {
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     backdrop-filter: blur(20px);
     width: fit-content;
     border: 1px solid black;
@@ -183,7 +182,7 @@ h2 {
 }
 @media (max-width: 800px) {
     #socials {
-     flex-wrap: wrap;
+        flex-wrap: wrap;
     }
     .page-text {
         width: 90vw;
@@ -210,7 +209,7 @@ h2 {
     border: 1px solid black;
     color: gray;
     text-align: center;
-    box-shadow:12px 12px 3px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 12px 12px 3px 2px rgba(0, 0, 0, 0.2);
     transform: rotate(3deg);
 }
 #socials {
@@ -232,7 +231,7 @@ h2 {
     background-color: rgb(250, 250, 242);
 }
 .project-box {
-    background-image: url("Assets/Paintings/peonies_in_a_vase_2018.44.124.webp");
+    background-image: url('Assets/Paintings/peonies_in_a_vase_2018.44.124.webp');
     background-size: 100vw;
     margin-top: 4%;
     display: flex;
@@ -241,14 +240,13 @@ h2 {
     overflow: hidden;
     justify-content: space-around;
     width: 75vw;
-    color:rgb(103, 103, 103);
-    border: 3mm ridge rgb(209, 188, 94);   
+    color: rgb(103, 103, 103);
+    border: 3mm ridge rgb(209, 188, 94);
     outline: 0.4rem dashed rgb(199, 187, 78);
-    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);    
+    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
     display: flex;
 }
 .project-images {
-    
     width: 20vw;
     display: flex;
     flex-direction: column;
@@ -303,7 +301,6 @@ h2 {
 }
 .projectBox blockquote {
     font-size: x-large;
-
 }
 li {
     margin: 2vh;
@@ -319,7 +316,6 @@ li {
     padding: 1.5%;
     border-radius: 10px;
 }
-
 
 /* Experience Section */
 #experience-section {
@@ -344,13 +340,14 @@ li {
     padding: 2.2%;
     text-align: left;
     overflow: hidden;
-    color:rgb(103, 103, 103);
+    color: rgb(103, 103, 103);
     background-image: url(Assets/Paintings/flowers_on_a_window_ledge_2014.79.25.webp);
-    background-size: 100vw;    margin: 1%;
+    background-size: 100vw;
+    margin: 1%;
     font-size: large;
-    border: 3mm ridge rgb(209, 188, 94);   
+    border: 3mm ridge rgb(209, 188, 94);
     outline: 0.4rem dashed rgb(199, 187, 78);
-    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);    
+    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
     display: flex;
 }
 .experience-info {
@@ -383,7 +380,6 @@ li {
     .experience-box {
         width: 85vw;
         margin: 1%;
-
     }
 }
 
@@ -442,7 +438,7 @@ li {
     justify-content: center;
     align-items: center;
     font-size: x-large;
-    color:rgba(0, 0, 0, 0.37);
+    color: rgba(0, 0, 0, 0.37);
 }
 .year-line {
     width: 1%;
@@ -460,9 +456,9 @@ li {
     height: 25vw;
     overflow: hidden;
     margin: 0.5%;
-    border: 1mm ridge rgb(209, 188, 94);   
+    border: 1mm ridge rgb(209, 188, 94);
     outline: 0.2rem dashed rgb(199, 187, 78);
-    box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);    
+    box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);
 }
 .gallery-caption-pair:hover {
     display: flex;
@@ -489,7 +485,12 @@ li {
     justify-content: end;
     width: 25vw;
     height: 25vw;
-    background-image: linear-gradient( 180deg,  rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.253) 65%, rgb(0, 0, 0));
+    background-image: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0),
+        rgba(0, 0, 0, 0.253) 65%,
+        rgb(0, 0, 0)
+    );
     position: absolute;
     z-index: 0;
 }
@@ -529,7 +530,12 @@ li {
         justify-content: end;
         align-items: center;
         width: 80vw;
-        background-image: linear-gradient( 180deg,  rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.253) 65%, rgb(0, 0, 0));
+        background-image: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0),
+            rgba(0, 0, 0, 0.253) 65%,
+            rgb(0, 0, 0)
+        );
         position: absolute;
         z-index: 0;
     }
@@ -546,14 +552,13 @@ li {
 
 /* Footer  */
 footer {
-    text-align:  center;
+    text-align: center;
     color: black;
-    background-color:whitesmoke;
+    background-color: whitesmoke;
     padding: 2px;
     width: 100vw;
     margin-top: 1%;
 }
-
 
 /* Photography Stuff */
 #photo-intro {
@@ -568,8 +573,8 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    background-image: url("Assets/Photos/SepiaTonedFrontenac.JPG");
-    background-size:cover;
+    background-image: url('Assets/Photos/SepiaTonedFrontenac.JPG');
+    background-size: cover;
     background-repeat: no-repeat;
     height: 40vh;
 }
@@ -577,7 +582,7 @@ footer {
 #photo-title {
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     backdrop-filter: blur(20px);
     width: fit-content;
     border: 1px solid black;
@@ -592,7 +597,7 @@ footer {
     align-items: center;
     background-color: white;
     padding: 0.5%;
-    text-align: center;    
+    text-align: center;
     backdrop-filter: blur(20px);
     width: fit-content;
     border: 1px solid black;
@@ -615,7 +620,7 @@ footer {
         align-items: center;
         background-color: white;
         padding: 1%;
-        text-align: center;    
+        text-align: center;
         backdrop-filter: blur(20px);
         width: fit-content;
         border: 1px solid black;
@@ -628,7 +633,6 @@ footer {
     #photo-headshot {
         width: 40vw;
     }
-    
 }
 
 #photo-about-text {
@@ -639,7 +643,7 @@ footer {
     background-color: white;
     color: black;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     backdrop-filter: blur(20px);
     border: 1px solid black;
     font-size: 1.5rem;
@@ -650,7 +654,6 @@ footer {
 #portfolio-title p {
     text-align: center;
     text-indent: 25px;
-
 }
 
 #portfolio {
@@ -669,7 +672,7 @@ footer {
 #cards-title {
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     backdrop-filter: blur(20px);
     width: fit-content;
     border: 1px solid black;
@@ -680,7 +683,7 @@ footer {
 .work-card {
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     border: 1px solid black;
     margin: 1%;
     font-size: larger;
@@ -689,7 +692,7 @@ footer {
 .auth-card {
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     border: 1px solid black;
     margin: 1%;
     font-size: larger;
@@ -721,7 +724,7 @@ footer {
     width: 70vw;
     background-color: white;
     padding: 1%;
-    text-align: center;    
+    text-align: center;
     border: 1px solid black;
     margin: 1%;
     overflow: scroll;
@@ -758,7 +761,7 @@ footer {
     width: 25vw;
     overflow: hidden;
     margin: 0.5%;
-    border: 1mm ridge rgb(209, 188, 94);   
+    border: 1mm ridge rgb(209, 188, 94);
     outline: 0.2rem dashed rgb(199, 187, 78);
     box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);
 }
